--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             margin: 0;
             padding: 15px;
             box-sizing: border-box;
@@ -31,8 +31,33 @@
         h1 {
             color: #FFFFFF;
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             font-weight: 700;
+        }
+        .description-box {
+            background-color: #2C2C2C;
+            border-radius: 8px;
+            padding: 15px;
+            margin-bottom: 30px;
+            border: 1px solid #444;
+        }
+        .description-box h2 {
+            color: #FFFFFF;
+            font-weight: 700;
+            font-size: 18px;
+            margin-top: 0;
+            margin-bottom: 10px;
+            text-align: center;
+        }
+        .description-box p {
+            color: #A0A0A0;
+            font-size: 14px;
+            line-height: 1.6;
+            margin: 0;
+        }
+        .description-box strong {
+            color: #E0E0E0;
+            font-weight: 500;
         }
         .form-group {
             margin-bottom: 20px;
@@ -121,19 +146,33 @@
 <body>
     <div class="container">
         <h1>Item Giver</h1>
+
+        <div class="description-box">
+            <h2>How to Use</h2>
+            <p>
+                This tool allows you to give items to players. Here’s what each field means:
+                <br><br>
+                <strong>Item ID:</strong> The name of the item you want to give. Start typing and a list of available items will appear.
+                <br>
+                <strong>Index (Optional):</strong> The inventory slot number where the item will be placed.
+                <br>
+                <strong>Stack (Optional):</strong> The quantity or amount of the item to give.
+            </p>
+        </div>
+
         <form id="item-form">
             <div class="form-group">
                 <label for="itemId">Item ID</label>
-                <input type="text" id="itemId" placeholder="e.g., Diamond Sword" required autocomplete="off">
-                 <div class="autocomplete-items" id="autocomplete-list"></div>
+                <input type="text" id="itemId" placeholder="Enter Item Id Here..." required autocomplete="off">
+                <div class="autocomplete-items" id="autocomplete-list"></div>
             </div>
             <div class="form-group">
                 <label for="index">Index (Optional)</label>
-                <input type="text" id="index" placeholder="First available slot">
+                <input type="text" id="index" placeholder="Enter Slot number Here...">
             </div>
             <div class="form-group">
                 <label for="stack">Stack (Optional)</label>
-                <input type="text" id="stack" placeholder="e.g., 1">
+                <input type="text" id="stack" placeholder="Enter Amount Of Item Here...">
             </div>
             <button type="submit">Give Item</button>
         </form>
