--- a/index.html
+++ b/index.html
@@ -134,6 +134,24 @@
             border-radius: 0 0 8px 8px;
         }
 
+        .autocomplete-items::-webkit-scrollbar {
+            width: 8px;
+        }
+
+        .autocomplete-items::-webkit-scrollbar-track {
+            background: #2C2C2C;
+            border-radius: 10px;
+        }
+
+        .autocomplete-items::-webkit-scrollbar-thumb {
+            background: #555;
+            border-radius: 10px;
+        }
+
+        .autocomplete-items::-webkit-scrollbar-thumb:hover {
+            background: #777;
+        }
+
         .autocomplete-items div {
             padding: 12px 15px;
             cursor: pointer;
